--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@preact/signals-react": "^1.3.7",
+    "apexcharts": "^3.45.1",
     "formik": "^2.4.5",
     "next": "14.0.3",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1"
