--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.2",
     "@mui/x-date-pickers": "^6.18.6",
     "@preact/signals-react": "^1.3.7",
+    "@vercel/speed-insights": "^1.0.4",
     "apexcharts": "^3.45.1",
     "formik": "^2.4.5",
     "material-react-table": "^2.5.2",
